--- a/Friendstyle.css
+++ b/Friendstyle.css
@@ -33,14 +33,14 @@
 .baner
 {
 	width:100%;
-	height:100px;
-	background-color:#F0F8FF;
+	height:150px;
+	background-color:#c0392b;
 	text-align:center;
 	color:var(--black);
 }
 .profile{
 	 width: 100%;
-  background-color:#F0F8FF;
+  background-color:#eee;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,7 +62,7 @@ h2
 {
 	
 	text-align:center;
-	color:var(--blue);
+	color:#3498db;
 	float:center;
 	text-align:center;
 }
@@ -70,6 +70,12 @@ hr
 {
 
  
+}
+h1
+{
+	text-align:center;
+	color:white;
+	font-family: 'Poppins', sans-serif;
 }
 .profilowe
 {
