--- a/style.css
+++ b/style.css
@@ -43,13 +43,6 @@
    font-size: 20px;
    margin-top: 10px;
 }
-.baner{
-	background-color:orange;
-	width:100%;
-	height:700px;
-	float:right;
-	text-align:center;
-}
 
 .btn{
    background-color: var(--blue);
@@ -85,6 +78,7 @@
    align-items: center;
    justify-content: center;
    padding:20px;
+   float:right;
 }
 
 .form-container form{
@@ -111,6 +105,7 @@
    color:var(--black);
    margin:10px 0;
    background-color: var(--light-bg);
+   float:right
 }
 
 .form-container form p{
@@ -237,4 +232,58 @@
    .update-profile form .flex .inputBox{
       width: 100%;
    }
+}
+.baner
+{
+	width:100%;
+	height:85px;
+	background-color: var(--dark-red);
+	text-align:center;
+	color:var(--white);
+}
+.container1 .profile1{
+   padding:20px;
+   background-color: var(--white);
+   box-shadow: var(--box-shadow);
+   text-align: center;
+   width: 400px;
+   border-radius: 5px;
+}
+
+div.container1 div.profile1 img{
+   height: 150px;
+   width: 150px;
+   border-radius: 50%;
+   object-fit: cover;
+   margin-bottom: 5px;
+}
+
+div.container1 div.profile1 h3{
+   margin:5px 0;
+   font-size: 20px;
+   color:var(--black);
+}
+
+div.container1 div.profile1 p{
+   margin-top: 20px;
+   color:var(--black);
+   font-size: 20px;
+}
+
+div.container1 div.profile1 p a{
+   color:var(--red);
+}
+
+div.container1 div.profile1 p a:hover{
+   text-decoration: underline;
+}
+.form-container form .box1{
+   width: 100%;
+   height:500px;
+   border-radius: 5px;
+   padding:12px 14px;
+   font-size: 18px;
+   color:var(--black);
+   margin:10px 0;
+   background-color: var(--light-bg);
 }
